# ocaml-oidc

./: .dockerignore  .env  .gitignore  .ocamlformat  CHANGES.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  Tiltfile  azure-pipelines.yml  cypress.json  docker-cache.json  docker-compose.yml  dune-project  flake.nix  index.html  morph-oidc-client.opam  morph-oidc-client.opam.template  morph-oidc.opam  oauth.opam  oidc-client.json  oidc-client.opam  oidc.opam  package.json  shell.nix  test-coverage.sh
.github/workflows/: build-master.yml  build_docker.yml  nix-build.yml  opam-build.yml
esy.lock/: index.json
executable/: CertificationClients.ml  DreamOauthClient.ml  DreamOidcClient.ml  DreamOidcMiddleware.ml  HotMiddleware.re  Logger.ml  MorphOidcClient.re  MorphOidcProvider.re  PiafOidc.ml  dune
morph-oidc/: index.html
morph-oidc-client/: index.html
morph-oidc-client/Library__AuthButtons/: index.html
morph-oidc-client/Library__AuthCallback/: index.html
morph-oidc-client/Library__AuthPage/: index.html
morph-oidc-client/Library__Button/: index.html
morph-oidc-client/Library__Card/: index.html
morph-oidc-client/Library__CertificationClients/: index.html
morph-oidc-client/Library__Context/: index.html
morph-oidc-client/Library__LandingPage/: index.html
morph-oidc-client/Library__Layout/: index.html
morph-oidc-client/Library__MsLogo/: index.html
morph-oidc-client/Library__Router/: index.html
morph-oidc-client/Library__Secured/: index.html
nix/: default.nix  generic.nix  overlays.nix  sources.nix
oauth/: Client.ml  Client.mli  Parameters.ml  Parameters.mli  Token.ml  Token.mli  TokenRequest.ml  TokenResponse.ml  Utils.ml  dune  index.html
oidc/: Claims.ml  Claims.re  Client.ml  Client.mli  Client.re  ClientMeta.ml  ClientMeta.mli  Discover.ml  Discover.mli  Discover.re  DynamicRegistration.ml  DynamicRegistration.mli  Error.ml  Error.mli  IDToken.ml  IDToken.mli  Jwks.ml  Jwks.mli  Jwt.ml  Oidc.ml  Oidc.mli  Parameters.ml  Parameters.mli  Parameters.re  Parameters.rei  Provider.ml  Provider.re  RefreshTokenRequest.ml  Scopes.ml  Scopes.mli  Scopes.re  Scopes.rei  SimpleClient.ml  SimpleClient.mli  States.ml  States.re  Token.ml  Token.mli  TokenEndpoint.ml  TokenEndpoint.mli  (+9 more)
oidc-client/: Dynamic.ml  Dynamic.mli  DynamicClient.ml  Internal.ml  KeyValue.ml  KeyValue.mli  MicrosoftClient.ml  MicrosoftClient.mli  OidcClient.ml  OidcClient.mli  RegisterClient.ml  Static.ml  Static.mli  StaticClient.ml  Utils.ml  dune  index.html  index.mld
oidc-client-simple/: Static.ml  Static.mli  dune
oidc-client/OidcClient/: index.html
oidc-client/OidcClient/Dynamic/: index.html
oidc-client/OidcClient/KeyValue/: index.html
oidc-client/OidcClient/KeyValue/MemoryKV/: index.html
oidc-client/OidcClient/KeyValue/module-type-KV/: index.html
oidc-client/OidcClient/MicrosoftClient/: index.html
oidc-client/OidcClient/Static/: index.html
oidc-client/OidcClient__/: index.html
oidc-client/OidcClient__/Dynamic/: index.html
oidc-client/OidcClient__/Internal/: index.html
oidc-client/OidcClient__/KeyValue/: index.html
oidc-client/OidcClient__/KeyValue/MemoryKV/: index.html
oidc-client/OidcClient__/KeyValue/module-type-KV/: index.html
oidc-client/OidcClient__/MicrosoftClient/: index.html
oidc-client/OidcClient__/Static/: index.html
oidc-client/OidcClient__/Utils/: index.html
oidc-client/OidcClient__/Utils/ROpt/: index.html
oidc-client/OidcClient__/Utils/RPiaf/: index.html
oidc-client/OidcClient__/Utils/RResult/: index.html
oidc-client/OidcClient__Dynamic/: index.html
oidc-client/OidcClient__Internal/: index.html
oidc-client/OidcClient__KeyValue/: index.html
oidc-client/OidcClient__KeyValue/MemoryKV/: index.html
oidc-client/OidcClient__KeyValue/module-type-KV/: index.html
oidc-client/OidcClient__MicrosoftClient/: index.html
oidc-client/OidcClient__Static/: index.html
oidc-client/OidcClient__Utils/: index.html
oidc-client/OidcClient__Utils/ROpt/: index.html
oidc-client/OidcClient__Utils/RPiaf/: index.html
oidc-client/OidcClient__Utils/RResult/: index.html
oidc/Oidc/: index.html
oidc/Oidc/Client/: index.html
oidc/Oidc/Discover/: index.html
oidc/Oidc/Error/: index.html
oidc/Oidc/IDToken/: index.html
oidc/Oidc/Jwks/: index.html
oidc/Oidc/Parameters/: index.html
oidc/Oidc/Parameters/Display/: index.html
oidc/Oidc/Parameters/Prompt/: index.html
oidc/Oidc/Pkce/: index.html
oidc/Oidc/Pkce/Challenge/: index.html
oidc/Oidc/Pkce/Verifier/: index.html
oidc/Oidc/Scopes/: index.html
oidc/Oidc/SimpleClient/: index.html
oidc/Oidc/Token/: index.html
oidc/Oidc/Token/RefreshTokenRequest/: index.html
oidc/Oidc/Token/Request/: index.html
oidc/Oidc/Token/Response/: index.html
oidc/Oidc/Userinfo/: index.html
oidc/Oidc__/: index.html
oidc/Oidc__/Claims/: index.html
oidc/Oidc__/Client/: index.html
oidc/Oidc__/Discover/: index.html
oidc/Oidc__/IDToken/: index.html
oidc/Oidc__/Jwks/: index.html
oidc/Oidc__/Parameters/: index.html
oidc/Oidc__/Provider/: index.html
oidc/Oidc__/Scopes/: index.html
oidc/Oidc__/States/: index.html
oidc/Oidc__/Token/: index.html
oidc/Oidc__/Utils/: index.html
oidc/Oidc__/Utils/RBase64/: index.html
oidc/Oidc__/Utils/RJson/: index.html
oidc/Oidc__/Utils/ROpt/: index.html
oidc/Oidc__/Utils/RResult/: index.html
oidc/Oidc__/Utils/RString/: index.html
oidc/Oidc__Claims/: index.html
oidc/Oidc__Client/: index.html
oidc/Oidc__Discover/: index.html
oidc/Oidc__IDToken/: index.html
oidc/Oidc__Jwks/: index.html
oidc/Oidc__Parameters/: index.html
oidc/Oidc__Provider/: index.html
oidc/Oidc__Scopes/: index.html
oidc/Oidc__States/: index.html
oidc/Oidc__Token/: index.html
oidc/Oidc__Utils/: index.html
oidc/Oidc__Utils/RBase64/: index.html
oidc/Oidc__Utils/RJson/: index.html
oidc/Oidc__Utils/ROpt/: index.html
oidc/Oidc__Utils/RResult/: index.html
oidc/Oidc__Utils/RString/: index.html
scripts/: dune-release.sh  restart-pod.sh
test/: Helpers.ml  Jwks.ml  Jwt.ml  OidcParameters.ml  Scopes.ml  Token.ml  dune  pkce.ml  test.ml
(+24 files in other folders)
