(executable
 (name MorphOidcClient)
 (package morph-oidc)
 (public_name MorphOidcClient)
 (libraries
  lwt
  logs
  logs.fmt
  fmt.tty
  morph-oidc.client
  oidc
  morph
  archi
  archi-lwt
  mirage-crypto-rng.unix
  piaf
  routes
  Logger)
 (modules MorphOidcClient))

(executable
 (name DreamOauthClient)
 (package morph-oidc)
 (public_name DreamOauthClient)
 (libraries
  lwt
  logs
  logs.fmt
  fmt.tty
  oidc
  dream
  archi
  archi-lwt
  mirage-crypto-rng.unix
  routes
  cohttp
  cohttp-lwt-unix)
 (modules DreamOauthClient))

(executable
 (name MorphOidcProvider)
 (package morph-oidc)
 (public_name MorphOidcProvider)
 (libraries
  lwt
  logs
  logs.fmt
  fmt.tty
  morph-oidc.provider
  oidc
  morph
  archi
  archi-lwt
  mirage-crypto-rng.unix
  piaf
  routes
  Logger)
 (modules MorphOidcProvider))

(library
 (name Logger)
 (package morph-oidc)
 (libraries logs logs.fmt fmt.tty)
 (modules Logger))

(env
 (docker
  (flags
   (:standard -ccopt -static))))
