(* -*- tuareg -*- *)

let preprocess =
  match Sys.getenv "BISECT_ENABLE" with
  | "yes" -> "(preprocess (pps bisect_ppx))"
  | _ -> ""
  | exception Not_found -> ""

let () = Jbuild_plugin.V1.send @@ {|
(env
 (dev
  (flags (:standard -w -16))
  ))
(library
 (name OidcClient)
 (public_name oidc-client)
 (libraries oidc piaf yojson uri)
 |} ^ preprocess ^ {|)

(documentation
 (package oidc-client)
 (mld_files (:standard)))
|}
