(* -*- tuareg -*- *)

let preprocess =
  match Sys.getenv "BISECT_ENABLE" with
  | "yes" -> "(preprocess (pps bisect_ppx))"
  | _ -> ""
  | exception Not_found -> ""

let () = Jbuild_plugin.V1.send @@ {|
(library
 (name Oidc)
 (public_name oidc)
 (libraries logs uri yojson jose uunf uunf.string base64)
 |} ^ preprocess ^ {|)
|}
