(* -*- tuareg -*- *)

let preprocess =
  match Sys.getenv "BISECT_ENABLE" with
  | "yes" -> "(preprocess (pps bisect_ppx))"
  | _ -> ""
  | exception Not_found -> ""

let () = Jbuild_plugin.V1.send @@ {|
(library
 (name oidc)
 (public_name oidc)
 (libraries uri yojson jose uunf uunf.string base64)
 |} ^ preprocess ^ {|)

(documentation
 (package oidc)
 (mld_files (:standard)))
|}
